--- a/styles.css
+++ b/styles.css
@@ -1,134 +1,105 @@
-/*  your css code here. If applicable */
-
-.shopping-cart{
-	padding-bottom: 50px;
-	font-family: 'Montserrat', sans-serif;
+.img-fluid{
+	width: 90px;
+	height: 100px;
 }
 
-.shopping-cart.dark{
-	background-color: #f6f6f6;
+.product{
+	display:flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	padding-right: 30px;
 }
 
-.shopping-cart .content{
-	box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.075);
-	background-color: white;
+.white-card{
+	border: 1px solid black;
+	width: 55vw;
 }
 
-.shopping-cart .block-heading{
-    padding-top: 50px;
-    margin-bottom: 40px;
-    text-align:center ;
+.desc{
+	display: flex;
+	flex-direction: column;
+	juatify-content: flex-start;
+	align-items: center;
 }
 
-.shopping-cart .block-heading p{
+
+.whole{
+	background-color: #f7fbff;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+
+}
+
+.block-heading{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 	text-align: center;
-	max-width: 420px;
-	margin: auto;
-	opacity:0.7;
+
+	width: 30%;
 }
 
-.shopping-cart .dark .block-heading p{
-	opacity:0.8;
-}
-
-.shopping-cart .block-heading h1,
-.shopping-cart .block-heading h2,
-.shopping-cart .block-heading h3 {
-	margin-bottom:1.2rem;
-	color: #3b99e0;
-}
-
-.shopping-cart .items{
-	margin: auto;
-}
-
-.shopping-cart .items .product{
-	margin-bottom: 20px;
-	padding-top: 20px;
-	padding-bottom: 20px;
-}
-
-.shopping-cart .items .product .info{
-	padding-top: 0px;
+.summary h3{
 	text-align: center;
 }
-
-.shopping-cart .items .product .info .product-name{
-	font-weight: 600;
+.top h1{
+	text-align: center;
 }
 
-.shopping-cart .items .product .info .product-name .product-info{
-	font-size: 14px;
-	margin-top: 15px;
+.top-para p{
+	text-align: center;
 }
 
-.shopping-cart .items .product .info .product-name .product-info .value{
-	font-weight: 400;
+.quant-input-cont{
+	width: 50px;
+	display: flex;
+	flex-direction: column;
+	
 }
 
-.shopping-cart .items .product .info .quantity .quantity-input{
-    margin: auto;
-    width: 80px;
+input{
+	width: 50px;
 }
 
-.shopping-cart .items .product .info .price{
-	margin-top: 15px;
-    font-weight: bold;
-    font-size: 22px;
- }
+.summary-item{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
 
-.shopping-cart .summary{
+	border-bottom: 1px solid black;
+}
+
+.quant{
+	border: 1px solid black;
+	text-align: center;
+}
+
+.summary{
 	border-top: 2px solid rgb(94, 164, 243);
-    background-color: #f7fbff;
-    height: 100%;
-    padding: 30px;
+	width: 20vw;
+	background-color: rgb(247, 251, 255);
+	padding-left: 20px;
 }
 
-.shopping-cart .summary h3{
-	text-align: center;
-	font-size: 1.3em;
-	font-weight: 600;
-	padding-top: 20px;
-	padding-bottom: 20px;
+.whole-card{
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
 }
 
-.shopping-cart .summary .summary-item:not(:last-of-type){
-	padding-bottom: 10px;
-	padding-top: 10px;
-	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-}
-
-.shopping-cart .summary .text{
-	font-size: 1em;
-	font-weight: 600;
-}
-
-.shopping-cart .summary .price{
-	font-size: 1em;
-	float: right;
-}
-
-.shopping-cart .summary button{
-	margin-top: 20px;
-}
-
-@media (min-width: 768px) {
-	.shopping-cart .items .product .info {
-		padding-top: 25px;
-		text-align: left; 
-	}
-
-	.shopping-cart .items .product .info .price {
-		font-weight: bold;
-		font-size: 22px;
-		top: 17px; 
-	}
-
-	.shopping-cart .items .product .info .quantity {
-		text-align: center; 
-	}
-	.shopping-cart .items .product .info .quantity .quantity-input {
-		padding: 4px 10px;
-		text-align: center; 
-	}
+.button{
+	background-color: blue;
+	color: white;
+	border: none;
+	font-size: 15px;
+	border-radius: 8px;width: 150px; height: 40px;
+	margin-top: 15px
 }
